# taskcrafter

./: .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py  taskcrafter.spec
.github/workflows/: python-app.yml
examples/custom_plugins/: batman.py
examples/jobs/: containers.yaml  desktop_example.yaml  empty_file.yaml  everything.yaml  external_plugin.yaml  inputs_outputs.yaml  jobs_with_hooks.yaml  simple.yaml  test_build_and_deploy.yaml
jobs/: containers.yaml  desktop_examples.yaml  external_plugin.yaml  inputs.yaml  jobs.yaml  jobs_with_hooks.yaml  my_jobs.yaml  simple.yaml  test_build_and_deploy.yaml
plugins/: echo.py
schemas/: jobs.json  jobs.yaml
taskcrafter/: cli.py  config.py  container.py  hook_loader.py  input_output_resolver.py  job_loader.py  logger.py  plugin_loader.py  preview.py  scheduler.py  util.py  wizard.py
taskcrafter/exceptions/: container.py  hook.py  job.py  plugin.py  yaml.py
taskcrafter/models/: app_config.py  hook.py  job.py  plugin.py  wizard.py
taskcrafter/plugins/: binary.py  delayed_echo.py  desktop_notifier.py  echo.py  exception.py  exit.py  notifier.py  url.py
taskcrafter/util/: file.py  templater.py  validator.py  yaml.py
tests/: test_container.py  test_logger.py  test_preview.py
