[project]
name = "taskcrafter_lordgreg"
version = "0.0.3"
authors = [
  { name = "lordgreg", email = "lordgreg+pypy@gmail.com" },
]
description = "Developer-friendly task scheduler with plugin support and job chaining logic"
readme = "README.md"
requires-python = ">=3.13.2"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/lordgreg/taskcrafter"
Issues = "https://github.com/lordgreg/taskcrafter/issues"
Source = "https://github.com/lordgreg/taskcrafter"
Documentation = "https://github.com/lordgreg/taskcrafter#readme"
